<resources>
    <string name="app_name">CSE_Dep_Apps</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="about_this_app">About This App</string>
    <string name="about_description">CSE Department Management is an educational Android application developed for the Computer Science and Technology (CST) Department of Moulvibazar Polytechnic Institute. This application provides quick and organized access to important departmental information, including teacher profiles, student information, class routines, and academic book resources. The main objective of this app is to make departmental information easily accessible for students and teachers through a simple, modern, and user-friendly mobile interface.</string>
    <string name="dept_teachers">Department Teachers</string>
    <string name="senior_instructor">Senior Instructor (CST)</string>
    <string name="instructor">Instructor (CST)</string>
    <string name="contact_teacher">Contact Teacher</string>
    <string name="teacher_profile_image">Teacher Profile Image</string>
    <string name="name_mehedi">MEHEDI HASAN</string>
    <string name="name_kajal">KAJAL DEBNATH</string>
    <string name="name_mahabub">MAHABUB ALAM SHAKIL</string>
    <string name="name_sohel">MD. SOHEL MIAH</string>
    <string name="name_tanbir">MD. TANBIR ABBASI</string>
    <string name="name_khaleda">KHALEDA AKTHER</string>
    <string name="name_shajjad">MD. SHAJJAD HOSSAIN</string>
    <string name="name_mahibul">MAHIBUL HASAN</string>
    <string name="project_developer">Project Developer</string>
    <string name="dev_subtitle">Developer of this Android Application</string>
    <string name="dev_roll">Roll No: 777408</string>
    <string name="dev_semester_shift">7th Semester | 2nd Shift</string>
    <string name="student_records">Student Records</string>
    <string name="roll_prefix">Roll: </string>
    <string name="routine_title_display">📅 Class Routine</string>
    <string name="routine_title">Class Routine</string>
    <string name="routine_subtitle">Computer Science and Technology (CST)</string>
    <string name="routine_institute">Moulvibazar Polytechnic Institute</string>
    <string name="routine_description_text">This page provides the official weekly class routine for 7th Semester students of the Computer Science and Technology (CST) Department. Students can quickly access their academic schedule and stay organized throughout the semester.</string>
    <string name="section_title_weekly">🗓 Weekly Class Routine</string>
    <string name="section_description_weekly">Official weekly class schedule for 7th Semester students.</string>
    <string name="day_sunday">SUNDAY</string>
    <string name="day_monday">MONDAY</string>
    <string name="day_tuesday">TUESDAY</string>
    <string name="day_wednesday">WEDNESDAY</string>
    <string name="day_thursday">THURSDAY</string>
    <string name="time_0800_0850">08:00 - 08:50</string>
    <string name="time_0850_0940">08:50 - 09:40</string>
    <string name="time_0940_1030">09:40 - 10:30</string>
    <string name="time_1030_1120">10:30 - 11:20</string>
    <string name="time_1120_1210">11:20 - 12:10</string>
    <string name="time_1210_0100">12:10 - 01:00</string>
    <string name="time_0100_0150">01:00 - 01:50</string>
    <string name="chip_theory">Theory</string>
    <string name="chip_lab">Lab</string>
    <string name="chip_break">Break</string>
    <string name="chip_free">Free</string>
    <string name="lab_ag">AG LAB</string>
    <string name="lab_sl2">SL-2</string>
    <string name="lab_hw">HW LAB</string>
    <string name="lab_nw">NW LAB</string>
    <string name="teacher_label">Teacher: </string>
    <string name="lab_label">Lab: </string>
    <string name="subject_free">Free</string>
    <string name="subject_break">Break</string>
    <string name="academic_books">Academic Books</string>
    <string name="books_description">This page provides the recommended academic books for 7th Semester students of the Computer Science and Technology (CST) Department. Students can easily explore subject-wise books to support both theoretical learning and practical skills.</string>
    <string name="recommended_books">📖 Recommended Books</string>
    <string name="recommended_books_desc">Browse the recommended books for each 7th Semester subject.</string>
    <string name="subject_ie">Innovation &amp; Entrepreneurship</string>
    <string name="code_ie">Code: 25853</string>
    <string name="book_ie">Innovation and Entrepreneurship</string>
    <string name="author_ie">Peter F. Drucker</string>
    <string name="subject_dmt">Digital Marketing Technique</string>
    <string name="code_dmt">Code: 28571</string>
    <string name="book_dmt">Digital Marketing For Dummies</string>
    <string name="author_dmt">Ryan Deiss &amp; Russ Henneberry</string>
    <string name="subject_nas">Network Administration &amp; Services</string>
    <string name="code_nas">Code: 28572</string>
    <string name="book_nas">Network Administration: A Beginner\'s Guide</string>
    <string name="author_nas">Wally Wang</string>
    <string name="subject_cse">Cyber Security &amp; Ethics</string>
    <string name="code_cse">Code: 28573</string>
    <string name="book_cse">Cybersecurity Essentials</string>
    <string name="author_cse">Charles J. Brooks</string>
    <string name="subject_adp">Apps Development Project</string>
    <string name="code_adp">Code: 28574</string>
    <string name="book_adp">Android Programming: The Big Nerd Ranch Guide</string>
    <string name="author_adp">Bill Phillips &amp; Chris Stewart</string>
    <string name="subject_ma">Multimedia &amp; Animation</string>
    <string name="code_ma">Code: 28575</string>
    <string name="book_ma">Multimedia: Making It Work</string>
    <string name="author_ma">Tay Vaughan</string>
    <string name="subject_pw">Project Work-II</string>
    <string name="code_pw">Code: 28576</string>
    <string name="book_pw">Software Project Management</string>
    <string name="author_pw">Bob Hughes &amp; Mike Cotterell</string>
    <string name="cst_dept">Computer Science and Technology (CST)</string>
    <string name="institute_name">Moulvibazar Polytechnic Institute</string>
    <string name="book_icon">Book Icon</string>
    <string name="notice_title_display">📢 Department Notices</string>
    <string name="notice_title">Department Notices</string>
    <string name="notice_description">Stay informed with the latest announcements, academic updates, examination schedules, events, and important departmental notices.</string>
    <string name="latest_notices">📋 Latest Notices</string>
    <string name="latest_notices_desc">All important departmental notices will appear here.</string>
    <string name="no_notices_available">📢 No Notices Available</string>
    <string name="no_notices_subtitle">There are currently no notices to display.\nPlease check back later for updates.</string>
    <string name="notice_icon_desc">Notice Icon</string>
    <string name="faculty_members">Faculty Members</string>
    <string name="teachers_description">Meet the dedicated and experienced faculty members of the Computer Science and Technology Department. Our teachers are committed to providing quality education, practical knowledge, academic guidance, and continuous support to help students achieve their goals.</string>
    <string name="dept_label">Dept: CST</string>
    <string name="total_faculty">Total Faculty: 7</string>
    <string name="semester_7th">Semester: 7th</string>
    <string name="institute_chip">Institute: MPI</string>
    <string name="position_instructor">Instructor</string>
    <string name="dept_full_name">Computer Science &amp; Technology Department</string>
    <string name="label_faculty">Teachers</string>
    <string name="val_faculty_count">7</string>
    <string name="label_dept_code">Department</string>
    <string name="val_dept_code">CST</string>
    <string name="label_semester_overview">Semester</string>
    <string name="val_semester_overview">7th</string>
    <string name="label_institute_overview">Institute</string>
    <string name="val_institute_overview">MPI</string>
    <string name="welcome_to">Welcome to</string>
    <string name="cst_full_name">Computer Science &amp; Technology (CST)</string>
    <string name="home_description">Welcome to the official CST Department Management application of Moulvibazar Polytechnic Institute.\n\nThis application provides quick and organized access to teachers, students, class routines, academic subjects, recommended books, and department notices.</string>
</resources>